--- a/app/src/main/res/layout/activity_usuarios_sistema.xml
+++ b/app/src/main/res/layout/activity_usuarios_sistema.xml
@@ -34,6 +34,7 @@
 
     <EditText
         android:id="@+id/et_password"
+        android:inputType="textPassword"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/et_usuario"
