--- a/app/src/main/res/layout/activity_administracion.xml
+++ b/app/src/main/res/layout/activity_administracion.xml
@@ -1,84 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/reciclador"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal">
+    android:padding="3dp"
+    android:scrollbars="vertical">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="8"
-        android:id="@+id/layoutTexto">
+</android.support.v7.widget.RecyclerView>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Editar"
-            android:id="@+id/btn_editar"
-            android:layout_gravity="start" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Eliminar"
-            android:id="@+id/btn_eliminar"
-            android:layout_gravity="end" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Añadir"
-            android:id="@+id/btn_add"
-            android:layout_gravity="end" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cerrar Sesión"
-            android:id="@+id/btn_cerrar"
-            android:layout_gravity="end" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:id="@+id/layoutTabla"
-        android:gravity="center">
-
-        <ScrollView
-            android:id="@+id/scrollvertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            android:layout_weight="1">
-
-            <HorizontalScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/scrollhorizontal"
-                android:scrollbars="horizontal"
-                android:layout_weight="1">
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TableLayout
-                        android:id="@+id/tabla"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                    </TableLayout>
-                </LinearLayout>
-
-            </HorizontalScrollView>
-        </ScrollView>
-
-    </LinearLayout>
-
-</LinearLayout>
