--- a/app/src/main/res/layout/content_gestion_clientes.xml
+++ b/app/src/main/res/layout/content_gestion_clientes.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".LoginActivity"
-    tools:showIn="@layout/activity_login">
+    tools:context="gsa.gsa.GestionClientes"
+    tools:showIn="@layout/activity_gestion_clientes">
 
 </RelativeLayout>
