--- a/app/src/main/res/layout/content_usuarios_sistema.xml
+++ b/app/src/main/res/layout/content_usuarios_sistema.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="gsa.gsa.UsuariosSistema"
+    tools:context=".AgregarUsuariosSistemaActivity"
     tools:showIn="@layout/activity_usuarios_sistema">
 
 </RelativeLayout>
