--- a/app/src/main/res/layout/clientes.xml
+++ b/app/src/main/res/layout/clientes.xml
@@ -5,7 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="gsa.gsa.Gestion">
+    tools:context=".Clientes">
+
+    <android.support.v7.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/reciclador_clientes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="3dp"
+        android:scrollbars="vertical">
+
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
