--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="gsa.gsa.MainActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+    xmlns:tools="http://schemas.android.com/tools" tools:context="gsa.gsa.MainActivity">
+
+    <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
+        android:orderInCategory="100"
         app:showAsAction="never" />
+
+    <item android:id="@+id/action_buscar"
+        android:title="buscar"
+        android:icon="@drawable/ic_factura"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_nuevo"
+        android:title="nuevo"
+        android:icon="@drawable/common_ic_googleplayservices"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom|withText" />
+
 </menu>
