--- a/app/src/main/res/layout/activity_administracion.xml
+++ b/app/src/main/res/layout/activity_administracion.xml
@@ -1,12 +1,35 @@
-
-<android.support.v7.widget.RecyclerView
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/reciclador"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="3dp"
-    android:scrollbars="vertical">
+    android:layout_height="match_parent">
 
-</android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/reciclador"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:tint="#ffffff"
+        app:layout_anchorGravity="bottom|end"
+        app:layout_anchor="@+id/reciclador"
+        android:src="@android:drawable/ic_input_add" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_anchorGravity="bottom|start"
+        android:layout_margin="16dp"
+        android:tint="#ffffff"
+        app:layout_anchor="@+id/reciclador"
+        android:src="@android:drawable/ic_lock_power_off" />
+
+</android.support.design.widget.CoordinatorLayout>
